hnew_damp introduced
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2914 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/W/Makefile
+++ b/W/Makefile
@@ -25,6 +25,12 @@ OPT=-O2
 #DEBUG= -ggdb -pg
 endif
 
+ifdef DEBUG
+OPT=-O0
+endif
+
+
+
 ifeq ("$(COMPILER)","g77")
 F77= g77 -fno-automatic 
 #FFLAGS= -Wall -ffortran-bounds-check
