make lhapdf the default
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2919 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Z/Makefile
+++ b/Z/Makefile
@@ -3,7 +3,7 @@
 COMPILER=gfortran
 ## Choose PDF: native,lhapdf
 ## LHAPDF package has to be installed separately
-PDF = native
+PDF = lhapdf
 #Choose Analysis: none, default
 ## default analysis may require FASTJET package, that has to be installed separately (see below)
 #ANALYSIS=default
