missing bra_ket_subroutines dependence of lhef_analysis
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2952 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/W/Makefile
+++ b/W/Makefile
@@ -137,7 +137,7 @@ pwhg_main:$(PWHG)
 	$(FF) $(patsubst %,obj/%,$(PWHG)) $(LIBS) $(LIBSFASTJET) $(STATIC) -o $@
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
-     opencount.o powheginput.o $(PWHGANAL)	\
+     opencount.o powheginput.o bra_ket_subroutines.o $(PWHGANAL)	\
      lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
