DMV: few improvements, including option for running width
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3020 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/DMV/Makefile
+++ b/DMV/Makefile
@@ -219,5 +219,5 @@ main-PYTHIA831-lhef: $(PYTHIA831)
 .PHONY: clean
 clean:
 	rm -f obj/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
-	main-PYTHIA-lhef
+	main-PYTHIA-lhef main-PYTHIA8-lhef main-PYTHIA831-lhef
 
