DMV: fixed Makefile
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3024 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/DMV/Makefile
+++ b/DMV/Makefile
@@ -130,9 +130,9 @@ endif
 # MADGRAPH+=helas.o	
 # ##########
 
-PYTHIA8LOCATION=/home/re/C_Cpp/pythia8180
-FJCXXFLAGS+=-I$(PYTHIA8LOCATION)/include/
-LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/archive -lpythia8 -llhapdfdummy -lstdc++
+#PYTHIA8LOCATION=/home/re/C_Cpp/pythia8180
+#FJCXXFLAGS+=-I$(PYTHIA8LOCATION)/include/
+#LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/archive -lpythia8 -llhapdfdummy -lstdc++
 
 
 %.o: %.f $(INCLUDE)
