DMS_tloop: fixed Makefile
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3025 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/DMS_tloop/Makefile
+++ b/DMS_tloop/Makefile
@@ -210,12 +210,9 @@ PWHGANAL+= fastjetfortran.o
 endif
 
 
-
-
-
-PYTHIA8LOCATION=/home/re/C_Cpp/pythia8180
-FJCXXFLAGS+=-I$(PYTHIA8LOCATION)/include
-LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/archive -lpythia8 -llhapdfdummy -lstdc++
+#PYTHIA8LOCATION=/home/re/C_Cpp/pythia8180
+#FJCXXFLAGS+=-I$(PYTHIA8LOCATION)/include
+#LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/archive -lpythia8 -llhapdfdummy -lstdc++
 
 
 %.o: %.f $(INCLUDE)
