Wp_Wp_J_j Added in patch for all lepton species
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3027 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Wp_Wp_J_J/Makefile
+++ b/Wp_Wp_J_J/Makefile
@@ -126,7 +126,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	pwhg_bookhist.o pwhg_analysis_driver.o checkmomzero.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	sigcollsoft.o sigvirtual.o  setlocalscales.o validflav.o mint_upb.o  \
-        pwhgreweight.o opencount.o ubprojections.o utils.o \
+        pwhgreweight.o opencount.o ubprojections.o utils.o reshufflemoms.o   \
         $(PDFPACK) $(USER) $(FPEOBJ)
 
 
