DMS_tloop: minor improvements in input card and IO, 	   no changes in the actual computation
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3033 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/DMS_tloop/Makefile
+++ b/DMS_tloop/Makefile
@@ -18,7 +18,7 @@ PDF=lhapdf
 #pwhg_analysis_DM_paperttmet_mul.f
 ############
 # tt+met paper: tt+met analysis (amt2)
-ANALYSIS=paperttmet_ttptmiss
+#ANALYSIS=paperttmet_ttptmiss
 #pwhg_analysis_DM_paperttmet_TTPTMISS_mul.f
 ############
 
