Fixed wrong behaviour of the Makefile when include files were modified, and with the "clean" target (nnlopsreweighter files were not cleaned) Remved the old AAA-README-Version-pre2 file.
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3088 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/HJ/Makefile
+++ b/HJ/Makefile
@@ -72,7 +72,7 @@ FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE1) -I$(INCLUDE2) -I$(INCLU
 
 LIBFILES=$(shell  for dir in $(HJ)/Madlib $(HJ)/MODEL $(HJ)/DHELAS ; do cd $$dir ; echo *.[fF] ' ' | sed 's/[fF] /o /g' ; cd .. ; done  )
 
-#INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
+INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
 
 ifeq ("$(PDF)","lhapdf")
 #LHAPDF_CONFIG=~/Pheno/PDFpacks/lhapdf-5.8.4-$(FC)/bin/lhapdf-config
@@ -264,7 +264,7 @@ $(OBJ):
 
 clean:
 	rm -f pwhg_main lhef_analysis main-HERWIG-lhef main-PYTHIA-lhef ; \
-        cd $(OBJ) ; rm -f $(PWHG) $(HERWIG) $(PYTHIA) $(LHEF)
+        cd $(OBJ) ; rm -f $(PWHG) $(HERWIG) $(PYTHIA) $(LHEF) $(NNLOPSREWEIGHTER) 
 
 
 veryclean:
