--- a/W_ew-BMNNP/Makefile
+++ b/W_ew-BMNNP/Makefile
@@ -3,7 +3,8 @@
 COMPILER=gfortran
 ## Choose PDF: native,lhapdf
 ## LHAPDF package has to be installed separately
-PDF = lhapdf
+#PDF = lhapdf
+PDF = native
 #Choose Analysis: none, default
 ## default analysis may require FASTJET package, that has to be installed separately (see below)
 ANALYSIS=default
