fixed lepton flavor summation for vbf_wp_wp
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3131 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/vbf_wp_wp/Makefile
+++ b/vbf_wp_wp/Makefile
@@ -89,7 +89,7 @@ PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis_v2.o fastjetfortran.o
 # Also add required Fastjet drivers to PWHGANAL (examples are reported)
 PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o #fastjetCDFMidPointwrap.o fastjetD0RunIIConewrap.o fastjetfortran.o
 else
-PWHGANAL=pwhg_analysis-dummy.o
+PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-dummy.o
 endif
 
 LIBS+=$(LHAPDFLIB) -Lvbfnlo-files -lvbfnlo 
