fixed name of the obj directory in the Makefile
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3135 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/hvq/Makefile
+++ b/hvq/Makefile
@@ -12,7 +12,6 @@ ANALYSIS=dummy
 #STATIC= -static
 #
 ifeq ("$(COMPILER)","gfortran")	
-OBJ=obj-ifort
 F77= gfortran -fno-automatic 	
 ## -fbounds-check sometimes causes a weird error due to non-lazy evaluation
 ## of boolean in gfortran.
@@ -27,7 +26,6 @@ OPT=-O2
 endif
 
 ifeq ("$(COMPILER)","ifort")
-OBJ=obj-ifort
 F77 = ifort -save  -extend_source
 CXX = icpc
 LIBS = -limf
@@ -39,6 +37,7 @@ OPT = -O3 #-fast
 #DEBUG= -debug -g
 endif
 
+OBJ=obj-$(COMPILER)
 
 
 PWD=$(shell pwd)
