Fix compilation problem in trijet
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3137 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/trijet/Makefile
+++ b/trijet/Makefile
@@ -1,6 +1,6 @@
 #-*- Makefile -*-
 ## Choose compiler: gfortran,ifort (g77 not supported, F90 constructs in use!)
-COMPILER=ifort
+COMPILER=gfortran
 FC=$(COMPILER)
 #CXX=g++
 ## Choose PDF: native,lhapdf
@@ -63,7 +63,7 @@ CXXFLAGS=$(OPT)
 
 PWD=$(shell pwd)
 WDNAME=$(shell basename $(PWD))
-VPATH= ./:../progress/:../:$(OBJ)
+VPATH= ./:../:$(OBJ)
 
 INCLUDE0=$(PWD)
 INCLUDE1=$(PWD)/include
