Working commit of VBF_Wp_Wm in V2
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3141 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/VBF_Wp_Wm/vbfnlo-files/makefile
+++ b/VBF_Wp_Wm/vbfnlo-files/makefile
@@ -1,8 +1,8 @@
 FC = gfortran
 INCLUDE1=$(PWD)
 INCLUDE2=$(PWD)/..
-INCLUDE3=$(PWD)/../boxfiles-pre2-1
-FFLAGS = -g -fno-automatic -ffixed-line-length-none -O2 -I$(INCLUDE1) -I$(INCLUDE2) 
+INCLUDE3=$(PWD)/../../include
+FFLAGS = -g -fno-automatic -ffixed-line-length-none -O2 -I$(INCLUDE1) -I$(INCLUDE2) -I$(INCLUDE3)
 
 # ----------------------------------------------------------------------------
 
