Added the complex-pole scheme a la Passarino for Higgs production
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3145 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/HW/Makefile
+++ b/HW/Makefile
@@ -123,7 +123,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	init_phys.o powheginput.o pdfcalls.o sigreal.o sigcollremn.o	\
 	pwhg_analysis_driver.o checkmomzero.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
-	reshufflemoms.o \
+	reshufflemoms.o pwhg_cpHTO_reweight.o \
 	pwhgreweight.o setlocalscales.o mint_upb.o opencount.o      \
 	validflav.o  ubprojections.o \
 	sigcollsoft.o sigvirtual.o $(PDFPACK) $(USER) $(FPEOBJ)
