added interface to PHOTOS in order to run only PHOTOS and produce LHE files on which to run the QCD shower
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3150 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Z_ew-BMNNPV/Makefile
+++ b/Z_ew-BMNNPV/Makefile
@@ -184,6 +184,13 @@ main-PYTHIA8-lhef: $(PYTHIA8)
 $(LIBSLHAPDF) -o $@
 
 
+INT_PHOTOS=main-PHOTOS-lhef.o photosCCF.o scalupveto.o boostrot.o powheginput.o lhefread.o cernroutines.o opencount.o newunit.o mwarn.o $(PDFPACK) $(FPE OBJ)
+
+main-PHOTOS-lhef: $(INT_PHOTOS)
+	$(FF) $(patsubst %,$(OBJ)/%,$(INT_PHOTOS)) $(LIBSPHOTOSCC) $(LIBSHEPMC) $(STATIC) -o $@
+
+
+
 # target to cleanup
 .PHONY: clean
 clean:
